<resources>

    <string name="app_name">HabTrack</string>
    <string name="wall">Wall</string>
    <string name="friends">Friends</string>
    <string name="post">Post</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>

    <string name="login">Sign In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot">Forgot Password\?</string>
    <string name="or">OR</string>
    <string name="new_here">New here\?\u0020</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="cancel">Cancel</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="facebook_sign_in">Sign in with Facebook</string>
    <string name="facebook_app_id">280991839980402</string>
    <string name="fb_login_protocol_scheme">fb280991839980402</string>

    <string name="habit_icon">Habit Icon</string>
    <string name="habit_name">Habit Name</string>
    <string name="zero">0</string>
    <string name="zero_percent">83%</string>
    <string name="completion_rate">Completion\nRate</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="habit_cur_streak">Current</string>
    <string name="habit_long_streak">Longest</string>
    <string name="likes">Likes</string>
    <string name="best">Best</string>
    <string name="total">Total</string>
    <string name="started">Started</string>
    <string name="welcome">Welcome back.</string>

    <string name="search">Search friends</string>
    <string name="remove">Remove</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="add_friend">Add Friend</string>
    <string name="back">Back</string>

    <string name="create_habit">Name your new habit.</string>
    <string name="name_habit">Name your habit…</string>
    <string name="choose_frequency">How often?</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="choose_icon">Choose an icon.</string>
    <string name="visibility">Who can view this?</string>
    <string name="just_me">Just me</string>
    <string name="my_friends">My friends</string>
    <string name="anyone">Anyone</string>
    <string name="create">Create</string>

    <string name="options">Options</string>
    <string name="mark_read">Mark as Read</string>
    <string name="mark_unread">Mark as Unread</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>

    <string name="my_profile">My Profile</string>
    <string name="bio">Bio</string>
    <string name="zero_habits">0 habits</string>
    <string name="zero_friends">0 friends</string>
    <string name="edit">Edit</string>

</resources>