<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/wall"
        android:enabled="true"
        android:icon="@drawable/wall_icon"
        android:title="@string/wall" />
    <item
        android:id="@+id/friends"
        android:enabled="true"
        android:icon="@drawable/friends_icon"
        android:title="@string/friends" />
    <item
        android:id="@+id/post"
        android:enabled="true"
        android:icon="@drawable/post"
        android:title="@string/post" />
    <item
        android:id="@+id/notifications"
        android:enabled="true"
        android:icon="@drawable/notification_icon"
        android:title="@string/notifications" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
</menu>