<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateHabit"
    android:background="@color/background">

    <TextView
        android:id="@+id/habit_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/habit_name"
        android:layout_marginTop="30dp"
        android:layout_marginStart="11dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/create_habit"
        android:textSize="25sp"
        android:textColor="@color/text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/habit_name"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.95"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/habit_name_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/edit_25"
        app:startIconTint="@color/text"
        app:errorEnabled="true"
        android:hint="@string/name_habit"
        android:textColorHint="@color/hint"
        app:boxBackgroundMode="none"
        app:hintTextColor="@color/background"
        app:hintAnimationEnabled="false"
        android:background="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/habit_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:inputType="textAutoComplete|textCapWords"
            android:imeOptions="actionDone"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/frequency_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/habit_name_text"
        app:layout_constraintLeft_toLeftOf="@id/habit_name_text"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/choose_frequency"
        android:textSize="25sp"
        android:textColor="@color/text" />

    <RadioGroup
        android:id="@+id/frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frequency_text"
        app:layout_constraintLeft_toLeftOf="@id/frequency_text"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/dec_type1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/daily"
            android:textColor="@color/radio_button_color"
            android:textSize="16sp"
            android:button="@drawable/radio_button"
            android:background="@drawable/radio_button"
            android:checked="true"
            android:selectAllOnFocus="true" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/bin_type1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/weekly"
            android:textSize="16sp"
            android:textColor="@color/radio_button_color"
            android:gravity="center"
            android:button="@drawable/radio_button"
            android:background="@drawable/radio_button" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/hex_type1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/monthly"
            android:textSize="16sp"
            android:textColor="@color/radio_button_color"
            android:gravity="center"
            android:button="@drawable/radio_button"
            android:background="@drawable/radio_button" />

    </RadioGroup>

    <TextView
        android:id="@+id/visibility_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frequency"
        app:layout_constraintLeft_toLeftOf="@id/habit_name_text"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/visibility"
        android:textSize="25sp"
        android:textColor="@color/text" />

    <RadioGroup
        android:id="@+id/visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/visibility_text"
        app:layout_constraintLeft_toLeftOf="@id/visibility_text"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/just_me"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/just_me"
            android:textSize="16sp"
            android:textColor="@color/radio_button_color"
            android:gravity="center"
            android:button="@drawable/radio_button"
            android:background="@drawable/radio_button"
            android:checked="true"
            android:selectAllOnFocus="true" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/friends"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/my_friends"
            android:textSize="16sp"
            android:textColor="@color/radio_button_color"
            android:gravity="center"
            android:button="@drawable/radio_button"
            android:background="@drawable/radio_button" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/everyone"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/anyone"
            android:textSize="16sp"
            android:textColor="@color/radio_button_color"
            android:gravity="center"
            android:button="@drawable/radio_button"
            android:background="@drawable/radio_button" />

    </RadioGroup>

    <TextView
        android:id="@+id/icons_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/visibility"
        app:layout_constraintLeft_toLeftOf="@id/habit_name_text"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/choose_icon"
        android:textSize="25sp"
        android:textColor="@color/text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/icons_text"
        android:overScrollMode="never"
        android:layoutAnimation="@anim/layout_enter_from_right" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/create"
        app:layout_constraintRight_toLeftOf="@id/create"
        android:layout_marginEnd="5dp"
        android:clickable="false"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:clickable="true"
            android:fontFamily="@font/nunito_extrabold"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:background="@android:color/transparent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/icons"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:elevation="4dp"
        android:clickable="true"
        android:background="@drawable/email_sign_in_button">

        <TextView
            android:id="@+id/create_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/create"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@android:color/transparent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>