<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfile">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="15dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.9"
                android:background="@color/purple">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:tint="@color/white"
                    android:src="@drawable/left_arrow"
                    android:contentDescription="@string/back"
                    android:background="@android:color/transparent" />

                <ImageButton
                    android:id="@+id/options"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:tint="@color/white"
                    android:src="@drawable/menu"
                    android:contentDescription="@string/my_profile"
                    android:background="@android:color/transparent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    app:layout_constraintTop_toBottomOf="@id/options"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:src="@drawable/default_pfp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/profile_pic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/username"
                    android:textSize="25sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.5"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/username"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/bio"
                    android:textColor="@color/faded_text"
                    android:textSize="16sp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/bio"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/num_habits"
                    android:layout_marginTop="20dp"
                    android:text="@string/zero_friends"
                    android:textSize="18sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/num_habits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/bio"
                    app:layout_constraintLeft_toRightOf="@id/friends"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/zero_habits"
                    android:textSize="18sp"
                    android:textColor="@color/white" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/friend_option"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.7"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/friends"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="25dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="6dp"
                    android:paddingHorizontal="15dp"
                    android:clickable="true"
                    android:background="@drawable/friend_button">

                    <ImageView
                        android:id="@+id/friend_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/friend_option_text"
                        android:layout_marginEnd="6dp"
                        android:tint="@color/purple"
                        android:src="@drawable/add_friend"
                        android:contentDescription="@string/friends" />

                    <TextView
                        android:id="@+id/friend_option_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/add_friend"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:gravity="center" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/habits"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:layoutAnimation="@anim/layout_grow_from_bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@drawable/top_rounded_corners" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>