<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/divider">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0.5dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:elevation="0dp"
        android:background="@color/card">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginVertical="20dp"
            android:src="@drawable/default_pfp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/profile_pic"
            app:layout_constraintBottom_toTopOf="@id/date"
            app:layout_constraintLeft_toRightOf="@id/profile_pic"
            app:layout_constraintRight_toLeftOf="@id/options"
            android:layout_marginStart="10dp"
            android:text="@string/notifications"
            android:textSize="15sp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:layout_constraintBottom_toBottomOf="@id/profile_pic"
            app:layout_constraintLeft_toRightOf="@id/profile_pic"
            android:layout_marginStart="10dp"
            android:text="@string/date"
            android:textSize="14sp"
            android:textColor="@color/hint" />

        <ImageButton
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/message"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="5dp"
            android:src="@drawable/menu"
            android:contentDescription="@string/options"
            android:background="@android:color/transparent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
